tests/ui/feature-gates/feature-gate-opaque-generic-const-args.stderr
error: generic parameters may not be used in const operations
  --> $DIR/feature-gate-opaque-generic-const-args.rs:5:44
   |
LL | const INC<const N: usize>: usize = const { N + 1 };
   |                                            ^
   |
   = help: add `#![feature(opaque_generic_const_args)]` to allow generic expressions as the RHS of const items

error: aborting due to 1 previous error

